@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-09T08:15:26Z",
-  "count_outdated" : 263,
-  "uniques_outdated" : 129,
-  "count" : 291,
+  "timestamp" : "2022-05-10T00:55:04Z",
+  "count_outdated" : 264,
+  "uniques_outdated" : 130,
+  "count" : 292,
   "uniques" : 151,
   "clones" : [
-    {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-01T00:00:00Z",
       "count": 2,
@@ -56,8 +49,8 @@
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
