@@ -1,3 +1,9 @@
+2022-05-10T00:55:04Z:
+* notice: last 14d: all unq: 28 14
+* notice: prev accum: outdated-all outdated-unq / all unq: 263 129 / 291 151
+* notice: next accum: outdated-all outdated-unq / all unq: 264 130 / 292 151
+* notice: prev json diff // prev day diff: unq all: +0 +1 / -0 -0 // +0 +1 / -0 -0
+
 2022-05-09T08:15:26Z:
 * notice: last 14d: all unq: 28 14
 * notice: prev accum: outdated-all outdated-unq / all unq: 263 129 / 290 150
